// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should only render add-menu for participants 1`] = `
<aside
  class="menu-bars menu-bars--user"
  id="menu-bars"
>
  <section
    class="menu user-menu"
  >
    <div
      class="menu__items"
    >
      <button
        class="menu-item menu-item--disabled menu-item--right"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            MenuBars.markAsDone
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-check.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--right"
        disabled=""
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            MenuBars.addImage
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-addimage.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--right"
        disabled=""
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            MenuBars.addSticker
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-addsticker.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--right"
        disabled=""
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            MenuBars.settings
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-settings.svg
        </svg>
      </button>
    </div>
  </section>
</aside>
`;

exports[`Menu should render both add- and settings-menu for moderators 1`] = `
<aside
  class="menu-bars menu-bars--user menu-bars--isAdmin"
  id="menu-bars"
>
  <section
    class="menu user-menu"
  >
    <div
      class="menu__items"
    >
      <button
        class="menu-item menu-item--disabled menu-item--right"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            MenuBars.markAsDone
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-check.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--right"
        disabled=""
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            MenuBars.addImage
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-addimage.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--right"
        disabled=""
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            MenuBars.addSticker
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-addsticker.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--right"
        disabled=""
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            MenuBars.settings
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-settings.svg
        </svg>
      </button>
    </div>
  </section>
  <section
    class="menu admin-menu"
  >
    <div
      class="menu__items"
    >
      <button
        class="menu-item menu-item--disabled menu-item--left"
        disabled=""
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            MenuBars.editColumns
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-column.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--left"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            TimerToggleButton.label
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-timer.svg
        </svg>
        <menu
          class="dropdown timer__dropdown"
        >
          <div
            class="dropdown__main"
          >
            <ul>
              <li
                class="dropdown__item-button timer-dropdown__item-button"
              >
                <button>
                  <label>
                    TimerToggleButton.1min
                  </label>
                  <div>
                    1
                  </div>
                </button>
              </li>
              <li
                class="dropdown__item-button timer-dropdown__item-button"
              >
                <button>
                  <label>
                    TimerToggleButton.3min
                  </label>
                  <div>
                    3
                  </div>
                </button>
              </li>
              <li
                class="dropdown__item-button timer-dropdown__item-button"
              >
                <button>
                  <label>
                    TimerToggleButton.5min
                  </label>
                  <div>
                    5
                  </div>
                </button>
              </li>
              <li
                class="dropdown__item-button timer-dropdown__item-button"
              >
                <button>
                  <label>
                    TimerToggleButton.customTime
                  </label>
                  <button>
                    +
                  </button>
                  <input
                    value="10"
                  />
                  <button>
                    -
                  </button>
                </button>
              </li>
            </ul>
          </div>
        </menu>
      </button>
      <button
        class="menu-item menu-item--disabled menu-item--left"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            MenuBars.startVoting
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-vote.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--disabled menu-item--left"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            MenuBars.startFocusMode
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-focus.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
      </button>
    </div>
  </section>
  <button
    class="menu-bars__switch"
  >
    <svg
      class="switch__icon switch__icon--add"
    >
      icon-toggle-add-menu.svg
    </svg>
    <svg
      class="switch__icon switch__icon--settings"
    >
      icon-toggle-settings-menu.svg
    </svg>
  </button>
</aside>
`;
